refactor: 파일명 변경 및 코드 수정
기존의 service이 controller의 역할을 수행하는 것같아 controller로 수정
nio를 io로 수정하면서 불필요하게 import했던 라이브러리 제거